@@ -12,7 +12,6 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import uk.gov.hmcts.probate.DmnDecisionTableBaseUnitTest;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -20,9 +19,18 @@ import java.util.stream.Stream;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static uk.gov.hmcts.probate.DmnDecisionTable.WA_TASK_TYPES_PROBATE;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DE_BONIS_NON;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_ADMON;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_ADMON_READY_TO_ISSUE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_INTESTACY;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_PROBATE;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_PROBATE_READY_TO_ISSUE;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_FIAT_WILL;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_INFECTED_BLOOD_COMPENSATION_AUTHORITY;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_WINDRUSH_SCHEME;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_HORIZON_SCHEME;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_WILL_OR_CODICIL_TO_BE_NOTATED;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_WITNESS_INTERVIEW;
 
 class CamundaTaskTypesTest extends DmnDecisionTableBaseUnitTest {
 
@@ -45,7 +53,42 @@ class CamundaTaskTypesTest extends DmnDecisionTableBaseUnitTest {
                         "taskTypeName", "Examine Digital Case - Intestacy",
                         "taskTypeId", EXAMINE_DIGITAL_CASE_INTESTACY
                 ),
-                Collections.emptyMap()
+                Map.of(
+                        "taskTypeName", "Examine Digital Case - Admon",
+                        "taskTypeId", EXAMINE_DIGITAL_CASE_ADMON_READY_TO_ISSUE
+                ),
+                Map.of(
+                        "taskTypeName", "Examine Digital Case - Probate",
+                        "taskTypeId", EXAMINE_DIGITAL_CASE_PROBATE_READY_TO_ISSUE
+                ),
+                Map.of(
+                        "taskTypeName", "Examine - De Bonis Non",
+                        "taskTypeId", EXAMINE_DE_BONIS_NON
+                ),
+                Map.of(
+                    "taskTypeName", "Examine - Fiat Will",
+                    "taskTypeId", EXAMINE_FIAT_WILL
+                ),
+                Map.of(
+                    "taskTypeName", "Examine - Infected Blood Compensation Authority",
+                    "taskTypeId", EXAMINE_INFECTED_BLOOD_COMPENSATION_AUTHORITY
+                ),
+                Map.of(
+                    "taskTypeName", "Examine - Windrush Scheme",
+                    "taskTypeId", EXAMINE_WINDRUSH_SCHEME
+                ),
+                Map.of(
+                    "taskTypeName", "Examine - Will or Codicil to be Notated",
+                    "taskTypeId", EXAMINE_WILL_OR_CODICIL_TO_BE_NOTATED
+                ),
+                Map.of(
+                    "taskTypeName", "Examine - Witness Interview",
+                    "taskTypeId", EXAMINE_WITNESS_INTERVIEW
+                ),
+                Map.of(
+                    "taskTypeName", "Examine - Horizon Scheme",
+                    "taskTypeId", EXAMINE_HORIZON_SCHEME
+                )
         );
         return Stream.of(
                 Arguments.of(
@@ -60,7 +103,7 @@ class CamundaTaskTypesTest extends DmnDecisionTableBaseUnitTest {
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
         assertThat(logic.getInputs().size(), is(1));
         assertThat(logic.getOutputs().size(), is(2));
-        assertThat(logic.getRules().size(), is(4));
+        assertThat(logic.getRules().size(), is(12));
     }
 
     @ParameterizedTest(name = "retrieve all task type data")
